# Qt-prototypes

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-format.py  gen_VS12_x64.bat  install_qscintilla.bat
CMakeModules/: FindQScintilla.cmake
ListProto/: CMakeLists.txt  main.cpp
ListProto/src/: ListViewModel.h
ListProto/src/test/: ListModelTest.h  testWindow.h
ModelSharing/: CMakeLists.txt  main.cpp
ModelSharing/src/: ComponentTest.h
Scintilla/: CMakeLists.txt  install_QScintilla.txt  install_QScintilla_x64.bat  main.cpp
Scintilla/src/: CallTip.cpp  ScintillaCommandPrivate.cpp  ScintillaPrivate.cpp  WdScintilla.cpp
Scintilla/src/TextEditor/: CallTip.h  ScintillaCommandPrivate.h  ScintillaPrivate.h  WdScintilla.h
Scintilla/src/test/: TestScintilla.cpp  TestScintilla.h  WdAction.cpp  WdAction.h  WdMenu.cpp  WdMenu.h  WdMenuBar.cpp  WdMenuBar.h  testWindow.h
SideAreaManagement/: CMakeLists.txt  main.cpp
SideAreaManagement/src/: Area.cpp  SideArea.cpp  SideAreaComponent.cpp  SideAreaTabs.cpp
SideAreaManagement/src/Area/: Area.h  SideArea.h  SideAreaComponent.h  SideAreaTabs.h
TextEditor/: CMakeLists.txt  gen_VS11_x86.bat  main.cpp
TextEditor/src/: BreakpointSidebar.cpp  CallTip.cpp  EditorSidebar.cpp  LineNumberSidebar.cpp  TextEditor.cpp  WdEditor.cpp
TextEditor/src/TextEditor/: BreakpointSidebar.h  CallTip.h  EditorSidebar.h  LineNumberSidebar.h  TextEditor.h  WdEditor.h  WdUserData.h
TextEditor/src/test/: testWindow.h
TreeProto/: CMakeLists.txt  main.cpp
TreeProto/src/: TreeViewModel.cpp  TreeViewModel.h
TreeProto/src/test/: TreeModelTest.h  testWindow.h
